# kdx-pi-signage-2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_vlc.py  youtube_downloader.py
app/: __init__.py  application.py  core.py  infrastructure.py  interfaces.py
docs/: 01-project-overview.md  02-architecture.md  03-technical-specifications.md
