[project]
name = "kdx-pi-signage-2"
version = "0.1.0"
description = "Multiplatform video signage system for Raspberry Pi"
authors = [
    {name = "KDX Team"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "python-vlc>=3.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0", # For retry logic
]

[project.optional-dependencies]
youtube = [
    "yt-dlp>=2023.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
kdx-pi-signage = "kdx_pi_signage_2.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kdx_pi_signage_2"]

[tool.kdx_pi_signage]
# Environment variables that uv will provide to the application
GOOGLE_DRIVE_FOLDER_ID = "your_google_drive_folder_id_here"
GOOGLE_APPLICATION_CREDENTIALS = "path/to/your/service-account-credentials.json"
GOOGLE_DRIVE_SYNC_ENABLED = "false"
VIDEOS_DIR = "videos"
TEST_VIDEOS_DIR = "test_videos"
CACHE_DIR = "cache"
LOGS_DIR = "logs"
SYNC_INTERVAL = "30"
VLC_VERBOSE_LEVEL = "0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
